--- a/project.ipynb
+++ b/project.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,6 @@
     "Pick one of the following data sets to analyze in this project.\n",
     "Load the data set, and show a random sample of 10 rows.\n",
     "\n",
-    
     "* [Wine Quality](https://archive.ics.uci.edu/dataset/186/wine+quality) ([PMLB - red subset only](https://github.com/EpistasisLab/pmlb/tree/master/datasets/wine_quality_red))\n",
     "* [Body Fat](https://www.openml.org/search?type=data&status=active&id=560) ([PMLB](https://github.com/EpistasisLab/pmlb/tree/master/datasets/560_bodyfat))\n",
     "\n",
@@ -132,11 +131,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>volatile acidity</th>\n",
+       "      <th>citric acid</th>\n",
+       "      <th>residual sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free sulfur dioxide</th>\n",
+       "      <th>total sulfur dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1037</th>\n",
+       "      <td>7.3</td>\n",
+       "      <td>0.910</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.074</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.99672</td>\n",
+       "      <td>3.35</td>\n",
+       "      <td>0.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>918</th>\n",
+       "      <td>8.4</td>\n",
+       "      <td>0.360</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.081</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>0.99640</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>0.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>414</th>\n",
+       "      <td>8.8</td>\n",
+       "      <td>0.520</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>0.087</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>0.99820</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>0.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>931</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.610</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.074</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.99748</td>\n",
+       "      <td>3.48</td>\n",
+       "      <td>0.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>568</th>\n",
+       "      <td>9.8</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.99900</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>0.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>7.7</td>\n",
+       "      <td>0.705</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.084</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0.99760</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>0.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1192</th>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.063</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0.99439</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1595</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>0.550</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.062</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>0.99512</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>0.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>823</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>0.540</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>0.99730</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>0.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>596</th>\n",
+       "      <td>12.4</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.059</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.99940</td>\n",
+       "      <td>3.04</td>\n",
+       "      <td>0.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "1037            7.3             0.910         0.10             1.8      0.074   \n",
+       "918             8.4             0.360         0.32             2.2      0.081   \n",
+       "414             8.8             0.520         0.34             2.7      0.087   \n",
+       "931             7.4             0.610         0.01             2.0      0.074   \n",
+       "568             9.8             0.500         0.49             2.6      0.250   \n",
+       "187             7.7             0.705         0.10             2.6      0.084   \n",
+       "1192            7.2             0.250         0.37             2.5      0.063   \n",
+       "1595            5.9             0.550         0.10             2.2      0.062   \n",
+       "823             6.7             0.540         0.13             2.0      0.076   \n",
+       "596            12.4             0.400         0.51             2.0      0.059   \n",
+       "\n",
+       "      free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \n",
+       "1037                 20.0                  56.0  0.99672  3.35       0.56  \n",
+       "918                  32.0                  79.0  0.99640  3.30       0.72  \n",
+       "414                  24.0                 122.0  0.99820  3.26       0.61  \n",
+       "931                  13.0                  38.0  0.99748  3.48       0.65  \n",
+       "568                   5.0                  20.0  0.99900  3.31       0.79  \n",
+       "187                   9.0                  26.0  0.99760  3.39       0.49  \n",
+       "1192                 11.0                  41.0  0.99439  3.52       0.80  \n",
+       "1595                 39.0                  51.0  0.99512  3.52       0.76  \n",
+       "823                  15.0                  36.0  0.99730  3.61       0.64  \n",
+       "596                   6.0                  24.0  0.99940  3.04       0.60  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# Load the dataset and drop missing values\n",
+    "wine_quality = pd.read_csv(\"https://github.com/epistasislab/pmlb/raw/refs/heads/master/datasets/wine_quality_red/wine_quality_red.tsv.gz\", sep=\"\\t\").dropna()\n",
+    "\n",
+    "# Select only the first 10 columns for analysis\n",
+    "# .iloc[:, :10] selects all rows (:) and columns from index 0 up to (but not including) 10\n",
+    "wine_quality_10_cols = wine_quality.iloc[:, :10]\n",
+    "\n",
+    "# Show a random sample of 10 rows from the limited dataset\n",
+    "wine_quality_10_cols.sample(10)\n"
    ]
   },
   {
@@ -157,18 +365,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar', 'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density', 'pH', 'sulphates']\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "print(wine_quality_10_cols.columns.tolist())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR ANSWERS HERE"
+    "YOUR ANSWERS HERE\n",
+    "\n",
+    "Columns in the Dataset:  \n",
+    "1. Fixed acidity: The non-volatile acids (like tartaric acid) that don't evaporate easily. It contributes to the overall sourness and structure of the wine.\n",
+    "2. Volatile acidity: The amount of acetic acid (vinegar) in the wine. High levels are undesirable and can lead to an unpleasant, vinegar-like taste.\n",
+    "3. Citric acid: A small amount of this acid is often added to wines to increase freshness and flavor.\n",
+    "4. Residual sugar: The amount of sugar left in the wine after fermentation stops. It can range from dry (low sugar) to sweet (high sugar).\n",
+    "5. Chlorides: The amount of salt in the wine. A higher concentration can indicate a salty taste, often due to the water source used in winemaking.\n",
+    "6. Free sulfur dioxide: The unbound portion of SO2​ that exists in equilibrium. It acts as an antimicrobial and antioxidant, helping to preserve the wine's freshness.\n",
+    "7. Total sulfur dioxide: The total amount of SO2​ present, both free and bound. It's a key preservative in winemaking.\n",
+    "8. Density: The mass per unit volume of the wine, related to the concentration of alcohol and sugar. It's often used to measure the alcohol content.\n",
+    "9. pH: A scale from 0 to 14 indicating how acidic or basic the wine is. Lower pH means higher acidity and a more tart taste.\n",
+    "10. Sulphates: The concentration of potassium sulphate, which is often added to the wine. It can act as a microbial agent and affects the flavor balance.\n",
+    "11. Alcohol: The percentage of ethyl alcohol present in the wine. Higher alcohol content generally contributes to the body and mouthfeel.\n",
+    "12. Quality: (Target Variable) The final sensory score, typically rated by human tasters on a scale from 0 to 10 (though the scores in this dataset range from 3 to 8)."
    ]
   },
   {
@@ -405,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
