--- a/project.ipynb
+++ b/project.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -169,134 +169,134 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1037</th>\n",
-       "      <td>7.3</td>\n",
-       "      <td>0.910</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0.074</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>0.99672</td>\n",
-       "      <td>3.35</td>\n",
-       "      <td>0.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>918</th>\n",
-       "      <td>8.4</td>\n",
-       "      <td>0.360</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>0.081</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>0.99640</td>\n",
-       "      <td>3.30</td>\n",
-       "      <td>0.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>414</th>\n",
-       "      <td>8.8</td>\n",
-       "      <td>0.520</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>0.087</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>122.0</td>\n",
-       "      <td>0.99820</td>\n",
-       "      <td>3.26</td>\n",
-       "      <td>0.61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>931</th>\n",
-       "      <td>7.4</td>\n",
-       "      <td>0.610</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.074</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>0.99748</td>\n",
-       "      <td>3.48</td>\n",
-       "      <td>0.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>568</th>\n",
-       "      <td>9.8</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>0.99900</td>\n",
-       "      <td>3.31</td>\n",
-       "      <td>0.79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
+       "      <th>87</th>\n",
        "      <td>7.7</td>\n",
-       "      <td>0.705</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>0.084</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0.99760</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>0.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1192</th>\n",
-       "      <td>7.2</td>\n",
-       "      <td>0.250</td>\n",
-       "      <td>0.37</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>0.063</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>0.99439</td>\n",
-       "      <td>3.52</td>\n",
-       "      <td>0.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1595</th>\n",
-       "      <td>5.9</td>\n",
-       "      <td>0.550</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>2.2</td>\n",
+       "      <td>0.490</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>1.9</td>\n",
        "      <td>0.062</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>0.99512</td>\n",
-       "      <td>3.52</td>\n",
-       "      <td>0.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>823</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>0.540</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.076</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>0.99730</td>\n",
-       "      <td>3.61</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0.99660</td>\n",
+       "      <td>3.39</td>\n",
        "      <td>0.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>596</th>\n",
-       "      <td>12.4</td>\n",
-       "      <td>0.400</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.059</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>0.99940</td>\n",
-       "      <td>3.04</td>\n",
+       "      <th>190</th>\n",
+       "      <td>8.2</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>0.077</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>0.99760</td>\n",
+       "      <td>3.23</td>\n",
+       "      <td>0.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>877</th>\n",
+       "      <td>7.7</td>\n",
+       "      <td>0.715</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>0.064</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>0.99371</td>\n",
+       "      <td>3.41</td>\n",
+       "      <td>0.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1151</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>0.580</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.044</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>0.99352</td>\n",
+       "      <td>3.46</td>\n",
+       "      <td>0.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.645</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.097</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>0.99675</td>\n",
+       "      <td>3.37</td>\n",
+       "      <td>0.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>6.8</td>\n",
+       "      <td>0.610</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.057</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.99525</td>\n",
+       "      <td>3.42</td>\n",
        "      <td>0.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308</th>\n",
+       "      <td>10.3</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>0.214</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.99940</td>\n",
+       "      <td>3.19</td>\n",
+       "      <td>0.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1074</th>\n",
+       "      <td>7.5</td>\n",
+       "      <td>0.770</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>0.098</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>0.99892</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>0.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1581</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>0.560</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.053</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0.99402</td>\n",
+       "      <td>3.54</td>\n",
+       "      <td>0.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1476</th>\n",
+       "      <td>9.9</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>0.205</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>1.00242</td>\n",
+       "      <td>3.16</td>\n",
+       "      <td>0.75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -304,31 +304,31 @@
       ],
       "text/plain": [
        "      fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
-       "1037            7.3             0.910         0.10             1.8      0.074   \n",
-       "918             8.4             0.360         0.32             2.2      0.081   \n",
-       "414             8.8             0.520         0.34             2.7      0.087   \n",
-       "931             7.4             0.610         0.01             2.0      0.074   \n",
-       "568             9.8             0.500         0.49             2.6      0.250   \n",
-       "187             7.7             0.705         0.10             2.6      0.084   \n",
-       "1192            7.2             0.250         0.37             2.5      0.063   \n",
-       "1595            5.9             0.550         0.10             2.2      0.062   \n",
-       "823             6.7             0.540         0.13             2.0      0.076   \n",
-       "596            12.4             0.400         0.51             2.0      0.059   \n",
+       "87              7.7             0.490         0.26             1.9      0.062   \n",
+       "190             8.2             0.500         0.35             2.9      0.077   \n",
+       "877             7.7             0.715         0.01             2.1      0.064   \n",
+       "1151            6.1             0.580         0.23             2.5      0.044   \n",
+       "237             7.2             0.645         0.00             1.9      0.097   \n",
+       "222             6.8             0.610         0.04             1.5      0.057   \n",
+       "308            10.3             0.430         0.44             2.4      0.214   \n",
+       "1074            7.5             0.770         0.20             8.1      0.098   \n",
+       "1581            6.2             0.560         0.09             1.7      0.053   \n",
+       "1476            9.9             0.500         0.50            13.8      0.205   \n",
        "\n",
        "      free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \n",
-       "1037                 20.0                  56.0  0.99672  3.35       0.56  \n",
-       "918                  32.0                  79.0  0.99640  3.30       0.72  \n",
-       "414                  24.0                 122.0  0.99820  3.26       0.61  \n",
-       "931                  13.0                  38.0  0.99748  3.48       0.65  \n",
-       "568                   5.0                  20.0  0.99900  3.31       0.79  \n",
-       "187                   9.0                  26.0  0.99760  3.39       0.49  \n",
-       "1192                 11.0                  41.0  0.99439  3.52       0.80  \n",
-       "1595                 39.0                  51.0  0.99512  3.52       0.76  \n",
-       "823                  15.0                  36.0  0.99730  3.61       0.64  \n",
-       "596                   6.0                  24.0  0.99940  3.04       0.60  "
+       "87                    9.0                  31.0  0.99660  3.39       0.64  \n",
+       "190                  21.0                 127.0  0.99760  3.23       0.62  \n",
+       "877                  31.0                  43.0  0.99371  3.41       0.57  \n",
+       "1151                 16.0                  70.0  0.99352  3.46       0.65  \n",
+       "237                  15.0                  39.0  0.99675  3.37       0.58  \n",
+       "222                   5.0                  10.0  0.99525  3.42       0.60  \n",
+       "308                   5.0                  12.0  0.99940  3.19       0.63  \n",
+       "1074                 30.0                  92.0  0.99892  3.20       0.58  \n",
+       "1581                 24.0                  32.0  0.99402  3.54       0.60  \n",
+       "1476                 48.0                  82.0  1.00242  3.16       0.75  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -673,12 +673,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "\n",
     "\n",
     "\n",
     "\n"
@@ -688,7 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR ANSWERS HERE"
+    "YOUR ANSWERS HERE\n"
    ]
   },
   {
@@ -705,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +715,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "YOUR ANSWERS HERE"
+    "YOUR ANSWERS HERE\n",
+    "\n",
+    "Three Regression Models:  \n",
+    "\n",
+    "1. Linear Regression\n",
+    "- Linear Regression is a basic and commonly used predictive model. It models the relationship between a scalar response variable and one or more explanatory variables using a linear equation.\n",
+    "- scikit-learn Documentation Link: https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html\n",
+    "- General Description Link (Wikipedia): https://en.wikipedia.org/wiki/Linear_regression\n",
+    "\n",
+    "2. Decision Tree Regressor\n",
+    "- A Decision Tree Regressor uses a tree-like structure to make predictions. It splits the data into branches based on feature values, recursively creating a set of rules (or nodes) until a prediction (the leaf node) can be made.\n",
+    "- scikit-learn Documentation Link: https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html\n",
+    "- General Description Link (Wikipedia): https://en.wikipedia.org/wiki/Decision_tree_learning\n",
+    "\n",
+    "3. Support Vector Regression\n",
+    "- (SVR)SVR is an adaptation of Support Vector Machines (SVM) used for regression tasks. Instead of trying to fit the maximum number of data points within a separating boundary (as in classification), SVR tries to fit the best line (or hyperplane) within a certain margin of tolerance (epsilon, $\\epsilon$), allowing for some errors.\n",
+    "- scikit-learn Documentation Link:https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVR.html\n",
+    "- General Description Link (Wikipedia):https://en.wikipedia.org/wiki/Support-vector_machine#Regression"
    ]
   },
   {
