--- a/project.ipynb
+++ b/project.ipynb
@@ -753,7 +753,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n"
    ]
   },
   {
